Changing the button container position to be contained with the main body container

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <div class="quotes">
-            <p id="quote"">Hello World</p>
-            <h3 id="author">Coddfoxxx</h3>
+            <p id="quote"">"Quote goes here"</p>
+            <h3 id="author">"-Author"</h3>
+            <div style="text-align: center;" class="button-container">
+       <button type="button" class="btn btn-primary" onclick="Generate()">Generate Quote</button>
+    </div>
         </div>
     </div>
-    <div style="text-align: center;">
-       <button type="button" class="btn btn-primary" onclick="Generate()">Generate Quote</button>
-  
-    </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
